language/move-lang/tests/move_check/translated_ir_tests/move/commands/while_move_local_2.exp
error[E06002]: use of unassigned variable
  ┌─ tests/move_check/translated_ir_tests/move/commands/while_move_local_2.move:8:17
  │
8 │             y = move x;
  │                 ^^^^^^
  │                 │
  │                 Invalid usage of variable 'x'
  │                 The variable might not have a value due to this position. The variable must be assigned a value before being used

error[E06002]: use of unassigned variable
   ┌─ tests/move_check/translated_ir_tests/move/commands/while_move_local_2.move:10:17
   │
10 │             x = move y;
   │                 ^^^^^^
   │                 │
   │                 Invalid usage of variable 'y'
   │                 The variable might not have a value due to this position. The variable must be assigned a value before being used

